# metafactory-rs

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Show.js
implementors/core/kinds/: trait.Copy.js
implementors/metafactory/: trait.MetaFactory.js
metafactory/: fn.argless_as_factory.html  fn.metafactory.html  index.html  stability.html  stability.json  struct.Factory.html  trait.AsFactoryExt.html  trait.Getter.html  trait.MetaFactory.html  trait.ToMetaFactory.html
metafactory/aggregate/: index.html  struct.Aggregate.html
metafactory/error/: enum.FactoryErrorKind.html  index.html  struct.ArgCountMismatch.html  struct.ArgTypeMismatch.html
old-src/: lib.rs
old-src/aggregate/: mod.rs
old-src/error/: mod.rs
old-src/factory/: mod.rs
old-src/from_closure/: mod.rs
src/: factory.rs  lib.rs
src/aggregate/: mod.rs
src/clone/: mod.rs
src/error/: mod.rs
src/factory/: mod.rs
src/from_clone/: mod.rs
src/from_closure/: manyarg.rs  mod.rs  zeroarg.rs
src/metafactory/: lib.rs.html
src/metafactory/aggregate/: mod.rs.html
src/metafactory/error/: mod.rs.html
src/metafactory/factory/: mod.rs.html
src/metafactory/from_clone/: mod.rs.html
src/metafactory/from_closure/: manyarg.rs.html  mod.rs.html  zeroarg.rs.html
src/typedef/: lib.rs.html
typedef/: index.html  stability.html  stability.json  struct.TypeDef.html
