[package]

name = "metafactory"
version = "0.5.0"
authors = [ "Nerijus Arlauskas <nercury@gmail.com>" ]

documentation = "http://nercury.github.io/metafactory-rs/metafactory/index.html"
repository = "https://github.com/Nercury/metafactory-rs"

readme = "README.md"

keywords = [
    "runtime", "factory", "reflection", "invoke", "constructor"
]

license = "MIT"

description = "Rust library to chain together object factories."

[dependencies]
typedef = "0.3"
hlist = "0.1"
